Fix overflow on form

--- a/index.css
+++ b/index.css
@@ -13,6 +13,10 @@ section {
   display: block;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 ul,
 li {
   list-style-type: none;
@@ -330,14 +334,15 @@ p {
 .form-bg {
   background: url(./images/contact-form-\ background-.svg);
   background-repeat: no-repeat;
-  background-size:cover;
-  padding: 50px 0;
+  background-size: cover;
+  padding: 50px 0 10px 0;
+  height: auto;
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
 }
 
 .form-content {
-  width: 80%;
-  margin: 0 auto;
-  text-align:center;
+  margin: 0 10%;
+  text-align: center;
 }
 
 .form-content h2 {
@@ -347,15 +352,15 @@ p {
   margin-bottom: 50px;
 }
 
-form{
+form {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  flex-wrap:wrap;
+  flex-wrap: wrap;
 }
 
 .form-content h2,
-.form-content p{
+.form-content p {
   color: #FFFFFF;
 }
 
@@ -371,10 +376,15 @@ input {
   color: #6070FF;
   width: 150px;
   margin-top: 10px;
+  margin-bottom: 20px;
   padding: 10px;
   border-radius: 8%;
-  border:1px solid gray;
+  border: 1px solid gray;
   font-size: 17px;
+}
+
+.submit:hover {
+  color: #1030be;
 }
 
 textarea,
@@ -385,5 +395,17 @@ input {
 
 textarea,
 input {
-  color:black;
+  color: black;
+}
+
+.shape {
+  background-color: black;
+  width: 40%;
+  height: 5px;
+  margin: 30px auto;
+  border-radius: 8px;
+}
+
+.shape:hover {
+  background-color: rgba(0, 0, 0, 0.521);
 }
